 o Added flag 'rice' to sysinfo() indicating whether R runs via Rice or not,
   meaning it can be used as a file and directory name tag, e.g. rice=TRUE.
 
 o startup(debug = TRUE) outputs much more information on what has and will
   take place through R's startup process.

 o startup() gained argument 'check' for controlling whether the content of
   startup files should be validated or not.

DEPRECATED AND DEFUNCT:

 o DEFUNCT: renviron() and rprofile() are defunct.  Removed api()$renviron()
   and api()$rprofile().  Use renviron_d() and rprofile_d() instead.

BUG FIXES:

 o Now install(backup = TRUE) guarantees that the .Rprofile file is backed up,
   otherwise an error is produced.  Previously it could silently fail if a
   backup file with the exact same name already existed.

Version: 0.7.0 [2017-09-04]

SIGNIFICANT CHANGES:

 o Package requires R (>= 2.14.0; Oct 2011) - was R (>= 2.13.0; Apr 2011).

NEW FEATURES:

 o Convenient session details are now gathered and recorded as R options
   immediately after processing '.Renviron.d' files.  These options, prefixed
   'startup.session.', are available while processing '.Rprofile.d' files and,
   by default, also after startup::startup() has completed.  For information
   on session details recorded, see help("startup_session_options").

 o Added a package vignette (available only in R >= 3.0.2).
 
 
Version: 0.6.1 [2017-05-16]

BUG FIXES:

 o startup() ignores more of the hidden files and folders that macOS may create
   and which should not be sourced during startup.  For instance, when copying
   a file 'foo.R' to a non-macOS file system, an auxillary file '._foo.R' may
   be created as well.
 

Version: 0.6.0 [2017-04-30]

SIGNIFICANT CHANGES:

 o Package requires R (>= 2.13.0; Apr 2011) - was R (>= 2.12.0; Oct 2010).

NEW FEATURES:

 o New conditional <key>=<value> specification: an unknown '<key>' (i.e. one
   that is not one of the known sysinfo() fields or 'package') will be