@@ -17,6 +17,10 @@ NEW FEATURES:
  o startup() gained argument 'check' for controlling whether the content of
    startup files should be validated or not.
 
+ o check(), and therefore also startup(check = TRUE), warns if R_LIBS,
+   R_LIBS_SITE, or R_LIBS_USER does not specify an existing directory.
+   
+
 DEPRECATED AND DEFUNCT:
 
  o DEFUNCT: renviron() and rprofile() are defunct.  Removed api()$renviron()
